src/Syntaxer.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.18.2 from Syntaxer.y
-----------------------------------------------------------------------------

state 2 contains 1 shift/reduce conflicts.
state 5 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parse -> All                                (0)
	All -> Options Groups Fxs Transactions             (1)
	Options ->                                         (2)
	Options -> Options Option                          (3)
	Option -> string ':' string                        (4)
	Option -> string ':' number                        (5)
	Groups ->                                          (6)
	Groups -> Groups Group                             (7)
	Group -> string '=' GroupSides                     (8)
	GroupSides -> GroupSide                            (9)
	GroupSides -> GroupSides ',' GroupSide             (10)
	GroupSide -> Side                                  (11)
	GroupSide -> SideWithFactor                        (12)
	GroupSide -> SideRemove                            (13)
	GroupSide -> '=' GroupSide                         (14)
	Fxs ->                                             (15)
	Fxs -> Fxs Fx                                      (16)
	Fx -> MoneyWithCurrency '=' MoneyWithCurrency      (17)
	Transactions ->                                    (18)
	Transactions -> Transactions Transaction           (19)
	Transaction -> TSides '>' MaybeMoneys '>' TSides ':' Comment   (20)
	Comment -> string                                  (21)
	MaybeMoneys -> '_'                                 (22)
	MaybeMoneys -> Moneys                              (23)
	Moneys -> MoneyList                                (24)
	MoneyList -> Money                                 (25)
	MoneyList -> MoneyList Money                       (26)
	Money -> MoneyWithoutCurrency                      (27)
	Money -> MoneyWithCurrency                         (28)
	MoneyWithoutCurrency -> number                     (29)
	MoneyWithCurrency -> number string                 (30)
	TSides -> TSide                                    (31)
	TSides -> TSides ',' TSide                         (32)
	TSide -> Side                                      (33)
	TSide -> SideWithFactor                            (34)
	TSide -> SideWithMoney                             (35)
	TSide -> SideRemove                                (36)
	TSide -> '=' TSide                                 (37)
	Side -> string                                     (38)
	SideWithFactor -> string '*' number                (39)
	SideWithMoney -> string Moneys                     (40)
	SideRemove -> '-' string                           (41)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'>'            { Arrow }
	':'            { Column }
	'_'            { Underscore }
	','            { Comma }
	'*'            { Asterisk }
	'='            { Equal }
	'-'            { Hyphen }
	string         { String $$ }
	number         { Number $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parse    rule  0
	All             rule  1
	Options         rules 2, 3
	Option          rules 4, 5
	Groups          rules 6, 7
	Group           rule  8
	GroupSides      rules 9, 10
	GroupSide       rules 11, 12, 13, 14
	Fxs             rules 15, 16
	Fx              rule  17
	Transactions    rules 18, 19
	Transaction     rule  20
	Comment         rule  21
	MaybeMoneys     rules 22, 23
	Moneys          rule  24
	MoneyList       rules 25, 26
	Money           rules 27, 28
	MoneyWithoutCurrency rule  29
	MoneyWithCurrency rule  30
	TSides          rules 31, 32
	TSide           rules 33, 34, 35, 36, 37
	Side            rule  38
	SideWithFactor  rule  39
	SideWithMoney   rule  40
	SideRemove      rule  41

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'='            reduce using rule 2
	'-'            reduce using rule 2
	string         reduce using rule 2
	number         reduce using rule 2
	%eof           reduce using rule 2

	All            goto state 3
	Options        goto state 2

State 1



	Options        goto state 2

State 2

	All -> Options . Groups Fxs Transactions            (rule 1)
	Options -> Options . Option                         (rule 3)

	'='            reduce using rule 6
	'-'            reduce using rule 6
	string         shift, and enter state 6
			(reduce using rule 6)

	number         reduce using rule 6
	%eof           reduce using rule 6

	Option         goto state 4
	Groups         goto state 5

State 3

	%start_parse -> All .                               (rule 0)

	%eof           accept


State 4

	Options -> Options Option .                         (rule 3)

	'='            reduce using rule 3
	'-'            reduce using rule 3
	string         reduce using rule 3
	number         reduce using rule 3
	%eof           reduce using rule 3


State 5

	All -> Options Groups . Fxs Transactions            (rule 1)
	Groups -> Groups . Group                            (rule 7)

	'='            reduce using rule 15
	'-'            reduce using rule 15
	string         shift, and enter state 10
			(reduce using rule 15)

	number         reduce using rule 15
	%eof           reduce using rule 15

	Group          goto state 8
	Fxs            goto state 9

State 6

	Option -> string . ':' string                       (rule 4)
	Option -> string . ':' number                       (rule 5)

	':'            shift, and enter state 7


State 7

	Option -> string ':' . string                       (rule 4)
	Option -> string ':' . number                       (rule 5)

	string         shift, and enter state 16
	number         shift, and enter state 17


State 8

	Groups -> Groups Group .                            (rule 7)

	'='            reduce using rule 7
	'-'            reduce using rule 7
	string         reduce using rule 7
	number         reduce using rule 7
	%eof           reduce using rule 7


State 9

	All -> Options Groups Fxs . Transactions            (rule 1)
	Fxs -> Fxs . Fx                                     (rule 16)

	'='            reduce using rule 18
	'-'            reduce using rule 18
	string         reduce using rule 18
	number         shift, and enter state 15
	%eof           reduce using rule 18

	Fx             goto state 12
	Transactions   goto state 13
	MoneyWithCurrencygoto state 14

State 10

	Group -> string . '=' GroupSides                    (rule 8)

	'='            shift, and enter state 11


State 11

	Group -> string '=' . GroupSides                    (rule 8)

	'='            shift, and enter state 35
	'-'            shift, and enter state 28
	string         shift, and enter state 36

	GroupSides     goto state 30
	GroupSide      goto state 31
	Side           goto state 32
	SideWithFactor goto state 33
	SideRemove     goto state 34

State 12

	Fxs -> Fxs Fx .                                     (rule 16)

	'='            reduce using rule 16
	'-'            reduce using rule 16
	string         reduce using rule 16
	number         reduce using rule 16
	%eof           reduce using rule 16


State 13

	All -> Options Groups Fxs Transactions .            (rule 1)
	Transactions -> Transactions . Transaction          (rule 19)

	'='            shift, and enter state 27
	'-'            shift, and enter state 28
	string         shift, and enter state 29
	%eof           reduce using rule 1

	Transaction    goto state 20
	TSides         goto state 21
	TSide          goto state 22
	Side           goto state 23
	SideWithFactor goto state 24
	SideWithMoney  goto state 25
	SideRemove     goto state 26

State 14

	Fx -> MoneyWithCurrency . '=' MoneyWithCurrency     (rule 17)

	'='            shift, and enter state 19


State 15

	MoneyWithCurrency -> number . string                (rule 30)

	string         shift, and enter state 18


State 16

	Option -> string ':' string .                       (rule 4)

	'='            reduce using rule 4
	'-'            reduce using rule 4
	string         reduce using rule 4
	number         reduce using rule 4
	%eof           reduce using rule 4


State 17

	Option -> string ':' number .                       (rule 5)

	'='            reduce using rule 5
	'-'            reduce using rule 5
	string         reduce using rule 5
	number         reduce using rule 5
	%eof           reduce using rule 5


State 18

	MoneyWithCurrency -> number string .                (rule 30)

	'>'            reduce using rule 30
	':'            reduce using rule 30
	','            reduce using rule 30
	'='            reduce using rule 30
	'-'            reduce using rule 30
	string         reduce using rule 30
	number         reduce using rule 30
	%eof           reduce using rule 30


State 19

	Fx -> MoneyWithCurrency '=' . MoneyWithCurrency     (rule 17)

	number         shift, and enter state 15

	MoneyWithCurrencygoto state 50

State 20

	Transactions -> Transactions Transaction .          (rule 19)

	'='            reduce using rule 19
	'-'            reduce using rule 19
	string         reduce using rule 19
	%eof           reduce using rule 19


State 21

	Transaction -> TSides . '>' MaybeMoneys '>' TSides ':' Comment    (rule 20)
	TSides -> TSides . ',' TSide                        (rule 32)

	'>'            shift, and enter state 48
	','            shift, and enter state 49


State 22

	TSides -> TSide .                                   (rule 31)

	'>'            reduce using rule 31
	':'            reduce using rule 31
	','            reduce using rule 31


State 23

	TSide -> Side .                                     (rule 33)

	'>'            reduce using rule 33
	':'            reduce using rule 33
	','            reduce using rule 33


State 24

	TSide -> SideWithFactor .                           (rule 34)

	'>'            reduce using rule 34
	':'            reduce using rule 34
	','            reduce using rule 34


State 25

	TSide -> SideWithMoney .                            (rule 35)

	'>'            reduce using rule 35
	':'            reduce using rule 35
	','            reduce using rule 35


State 26

	TSide -> SideRemove .                               (rule 36)

	'>'            reduce using rule 36
	':'            reduce using rule 36
	','            reduce using rule 36


State 27

	TSide -> '=' . TSide                                (rule 37)

	'='            shift, and enter state 27
	'-'            shift, and enter state 28
	string         shift, and enter state 29

	TSide          goto state 47
	Side           goto state 23
	SideWithFactor goto state 24
	SideWithMoney  goto state 25
	SideRemove     goto state 26

State 28

	SideRemove -> '-' . string                          (rule 41)

	string         shift, and enter state 46


State 29

	Side -> string .                                    (rule 38)
	SideWithFactor -> string . '*' number               (rule 39)
	SideWithMoney -> string . Moneys                    (rule 40)

	'>'            reduce using rule 38
	':'            reduce using rule 38
	','            reduce using rule 38
	'*'            shift, and enter state 37
	number         shift, and enter state 45

	Moneys         goto state 40
	MoneyList      goto state 41
	Money          goto state 42
	MoneyWithoutCurrencygoto state 43
	MoneyWithCurrencygoto state 44

State 30

	Group -> string '=' GroupSides .                    (rule 8)
	GroupSides -> GroupSides . ',' GroupSide            (rule 10)

	','            shift, and enter state 39
	'='            reduce using rule 8
	'-'            reduce using rule 8
	string         reduce using rule 8
	number         reduce using rule 8
	%eof           reduce using rule 8


State 31

	GroupSides -> GroupSide .                           (rule 9)

	','            reduce using rule 9
	'='            reduce using rule 9
	'-'            reduce using rule 9
	string         reduce using rule 9
	number         reduce using rule 9
	%eof           reduce using rule 9


State 32

	GroupSide -> Side .                                 (rule 11)

	','            reduce using rule 11
	'='            reduce using rule 11
	'-'            reduce using rule 11
	string         reduce using rule 11
	number         reduce using rule 11
	%eof           reduce using rule 11


State 33

	GroupSide -> SideWithFactor .                       (rule 12)

	','            reduce using rule 12
	'='            reduce using rule 12
	'-'            reduce using rule 12
	string         reduce using rule 12
	number         reduce using rule 12
	%eof           reduce using rule 12


State 34

	GroupSide -> SideRemove .                           (rule 13)

	','            reduce using rule 13
	'='            reduce using rule 13
	'-'            reduce using rule 13
	string         reduce using rule 13
	number         reduce using rule 13
	%eof           reduce using rule 13


State 35

	GroupSide -> '=' . GroupSide                        (rule 14)

	'='            shift, and enter state 35
	'-'            shift, and enter state 28
	string         shift, and enter state 36

	GroupSide      goto state 38
	Side           goto state 32
	SideWithFactor goto state 33
	SideRemove     goto state 34

State 36

	Side -> string .                                    (rule 38)
	SideWithFactor -> string . '*' number               (rule 39)

	','            reduce using rule 38
	'*'            shift, and enter state 37
	'='            reduce using rule 38
	'-'            reduce using rule 38
	string         reduce using rule 38
	number         reduce using rule 38
	%eof           reduce using rule 38


State 37

	SideWithFactor -> string '*' . number               (rule 39)

	number         shift, and enter state 57


State 38

	GroupSide -> '=' GroupSide .                        (rule 14)

	','            reduce using rule 14
	'='            reduce using rule 14
	'-'            reduce using rule 14
	string         reduce using rule 14
	number         reduce using rule 14
	%eof           reduce using rule 14


State 39

	GroupSides -> GroupSides ',' . GroupSide            (rule 10)

	'='            shift, and enter state 35
	'-'            shift, and enter state 28
	string         shift, and enter state 36

	GroupSide      goto state 56
	Side           goto state 32
	SideWithFactor goto state 33
	SideRemove     goto state 34

State 40

	SideWithMoney -> string Moneys .                    (rule 40)

	'>'            reduce using rule 40
	':'            reduce using rule 40
	','            reduce using rule 40


State 41

	Moneys -> MoneyList .                               (rule 24)
	MoneyList -> MoneyList . Money                      (rule 26)

	'>'            reduce using rule 24
	':'            reduce using rule 24
	','            reduce using rule 24
	number         shift, and enter state 45

	Money          goto state 55
	MoneyWithoutCurrencygoto state 43
	MoneyWithCurrencygoto state 44

State 42

	MoneyList -> Money .                                (rule 25)

	'>'            reduce using rule 25
	':'            reduce using rule 25
	','            reduce using rule 25
	number         reduce using rule 25


State 43

	Money -> MoneyWithoutCurrency .                     (rule 27)

	'>'            reduce using rule 27
	':'            reduce using rule 27
	','            reduce using rule 27
	number         reduce using rule 27


State 44

	Money -> MoneyWithCurrency .                        (rule 28)

	'>'            reduce using rule 28
	':'            reduce using rule 28
	','            reduce using rule 28
	number         reduce using rule 28


State 45

	MoneyWithoutCurrency -> number .                    (rule 29)
	MoneyWithCurrency -> number . string                (rule 30)

	'>'            reduce using rule 29
	':'            reduce using rule 29
	','            reduce using rule 29
	string         shift, and enter state 18
	number         reduce using rule 29


State 46

	SideRemove -> '-' string .                          (rule 41)

	'>'            reduce using rule 41
	':'            reduce using rule 41
	','            reduce using rule 41
	'='            reduce using rule 41
	'-'            reduce using rule 41
	string         reduce using rule 41
	number         reduce using rule 41
	%eof           reduce using rule 41


State 47

	TSide -> '=' TSide .                                (rule 37)

	'>'            reduce using rule 37
	':'            reduce using rule 37
	','            reduce using rule 37


State 48

	Transaction -> TSides '>' . MaybeMoneys '>' TSides ':' Comment    (rule 20)

	'_'            shift, and enter state 54
	number         shift, and enter state 45

	MaybeMoneys    goto state 52
	Moneys         goto state 53
	MoneyList      goto state 41
	Money          goto state 42
	MoneyWithoutCurrencygoto state 43
	MoneyWithCurrencygoto state 44

State 49

	TSides -> TSides ',' . TSide                        (rule 32)

	'='            shift, and enter state 27
	'-'            shift, and enter state 28
	string         shift, and enter state 29

	TSide          goto state 51
	Side           goto state 23
	SideWithFactor goto state 24
	SideWithMoney  goto state 25
	SideRemove     goto state 26

State 50

	Fx -> MoneyWithCurrency '=' MoneyWithCurrency .     (rule 17)

	'='            reduce using rule 17
	'-'            reduce using rule 17
	string         reduce using rule 17
	number         reduce using rule 17
	%eof           reduce using rule 17


State 51

	TSides -> TSides ',' TSide .                        (rule 32)

	'>'            reduce using rule 32
	':'            reduce using rule 32
	','            reduce using rule 32


State 52

	Transaction -> TSides '>' MaybeMoneys . '>' TSides ':' Comment    (rule 20)

	'>'            shift, and enter state 58


State 53

	MaybeMoneys -> Moneys .                             (rule 23)

	'>'            reduce using rule 23


State 54

	MaybeMoneys -> '_' .                                (rule 22)

	'>'            reduce using rule 22


State 55

	MoneyList -> MoneyList Money .                      (rule 26)

	'>'            reduce using rule 26
	':'            reduce using rule 26
	','            reduce using rule 26
	number         reduce using rule 26


State 56

	GroupSides -> GroupSides ',' GroupSide .            (rule 10)

	','            reduce using rule 10
	'='            reduce using rule 10
	'-'            reduce using rule 10
	string         reduce using rule 10
	number         reduce using rule 10
	%eof           reduce using rule 10


State 57

	SideWithFactor -> string '*' number .               (rule 39)

	'>'            reduce using rule 39
	':'            reduce using rule 39
	','            reduce using rule 39
	'='            reduce using rule 39
	'-'            reduce using rule 39
	string         reduce using rule 39
	number         reduce using rule 39
	%eof           reduce using rule 39


State 58

	Transaction -> TSides '>' MaybeMoneys '>' . TSides ':' Comment    (rule 20)

	'='            shift, and enter state 27
	'-'            shift, and enter state 28
	string         shift, and enter state 29

	TSides         goto state 59
	TSide          goto state 22
	Side           goto state 23
	SideWithFactor goto state 24
	SideWithMoney  goto state 25
	SideRemove     goto state 26

State 59

	Transaction -> TSides '>' MaybeMoneys '>' TSides . ':' Comment    (rule 20)
	TSides -> TSides . ',' TSide                        (rule 32)

	':'            shift, and enter state 60
	','            shift, and enter state 49


State 60

	Transaction -> TSides '>' MaybeMoneys '>' TSides ':' . Comment    (rule 20)

	string         shift, and enter state 62

	Comment        goto state 61

State 61

	Transaction -> TSides '>' MaybeMoneys '>' TSides ':' Comment .    (rule 20)

	'='            reduce using rule 20
	'-'            reduce using rule 20
	string         reduce using rule 20
	%eof           reduce using rule 20


State 62

	Comment -> string .                                 (rule 21)

	'='            reduce using rule 21
	'-'            reduce using rule 21
	string         reduce using rule 21
	%eof           reduce using rule 21


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 42
Number of terminals: 9
Number of non-terminals: 25
Number of states: 63
